crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__script_setup_sfc_vapor_output_avoids_local_render_collision.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---
import { defineVaporComponent as _defineVaporComponent, proxyRefs as _proxyRefs } from 'vue'
import { template as _template } from 'vue';

const t0 = _template("<div>Hello</div>", true)

function render(_ctx, $props, $emit, $attrs, $slots, $setup) {
  const n0 = t0()
  return n0
}
const __vaporRender = render

export default /*@__PURE__*/_defineVaporComponent({
  __name: 'anonymous',
  render: __vaporRender,
  setup(__props, { emit: __emit, attrs: __attrs, slots: __slots }) {

function render() {
  return 'local'
}

const __returned__ = { render }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
const __ctx = _proxyRefs(__returned__)
return __vaporRender(__ctx, __props, __emit, __attrs, __slots, __returned__)
}

})
